# 2017-robot-code

./: Cameras.java  GearVision.java  README.md  Vision2.0.cpp
Arduino/sketch_mar17a/: sketch_mar17a.ino
Cameras/: CameraClient.java  Socket.cpp  Socket.hpp  main.cpp
Dashboard/: index.html  main.js  ui.js
Dashboard/bower_components/angular-animate/: .bower.json
Dashboard/bower_components/angular-messages/: .bower.json
Dashboard/css/: style.css
Dashboard/directives/: barChart.js  circleChart.js
Dashboard_vr/: Dashboard.url  index.html  main.js  package.json  ui.js
Dashboard_vr/bower_components/angular-aria/: .bower.json
Dashboard_vr/bower_components/angular-material/: .bower.json
Dashboard_vr/bower_components/angular-nvd3/: .bower.json
Dashboard_vr/css/: animations.css  style.css
Dashboard_vr/directives/: circleChart.js  compass.js
Roborio/: .classpath  .project  build.properties
Roborio-Kotlin/: README.md  build.gradle
Roborio-Kotlin/.kotlin-for-frc/: kotlin-frc-preferences.json
Roborio-Kotlin/.wpilib/: wpilib_preferences.json
Roborio-Kotlin/src/main/java/frc/robot/: Main.kt  Morpheus.kt  OI.kt
Roborio-Kotlin/src/main/java/frc/robot/commands/Climber/: ClimberJoystickDrive.kt
Roborio-Kotlin/src/main/java/frc/robot/commands/Drive/: ArcadeJoystickDrive.kt  DriftMode.kt  ResetEncoders.kt  ResetGyro.kt  ToggleAngleLock.kt  ToggleFieldOriented.kt
Roborio-Kotlin/src/main/java/frc/robot/data/: ClimberData.kt  DrivetrainData.kt  OIData.kt
Roborio-Kotlin/src/main/java/frc/robot/subsystems/: Climber.kt  Drivetrain.kt
Roborio-Kotlin/src/main/java/frc/robot/util/: ToggleOnButtonPress.kt
Roborio/src/org/usfirst/frc/team6325/robot/: AutoChooser.java  OI.java  Robot.java  RobotMap.java
Vision/: DetectLift  GearVision.java  JetsonProcessing.java  LiftTracker.cpp  LiftTracker.h  RobotConstants.h  UDPMain.cpp  VisionMethods.h  ahoy.cpp  ahoy.h  ahoy22.cpp  boiler.cpp  boiler.h  examplei2c.cpp  liftTracker.cpp  liftTracker.h  main.cpp
Vision/ResetVision/: CMakeLists.txt  doubleStreamVision.cpp  singleStreamVision.cpp
Vision/VulkanSDK/: Getting_Started.html  Release_Notes.html  build_samples.sh  setup-env.sh
Vision/VulkanSDK/doc/: LoaderAndLayerInterface.html  apispec.html  getting_started.html  index.html  layers.html  release_notes-1.0.html  sdk_license.html  spirv_toolchain.html  trace_tools.html  validation_layer_details.html  via.html  vulkan_samples.html  vulkan_tools_frame.html
Vision/VulkanSDK/doc/tutorial/html/: 01-init_instance.html
Vision/VulkanSDK/source/layers/: api_dump.cpp  api_dump_text.h  parameter_validation.h  thread_check.h  unique_objects_wrappers.h  vk_dispatch_table_helper.h
Vision/VulkanSDK/source/lib/: libvulkan.so.1.0.39
Vision/VulkanSDK/source/via/: CMakeLists.txt
Vision/VulkanSDK/x86_64/etc/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_core_validation.json  VkLayer_image.json  VkLayer_monitor.json  VkLayer_object_tracker.json  VkLayer_parameter_validation.json  VkLayer_screenshot.json  VkLayer_swapchain.json  VkLayer_threading.json  VkLayer_unique_objects.json  VkLayer_vktrace_layer.json
Vision/VulkanSDK/x86_64/lib/: libvulkan.so.1  libvulkan.so.1.0.39
Vision/ahoy/: .i2c.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  ahoy.cpp  ahoy.h  ahoy22.cpp  ahoy33.cpp  ahoy44.cpp  cmake_install.cmake  startup.sh
Vision/i2c/: I2C.cpp  I2C.h  I2CBus.cpp  I2CBus.h  I2CBusFactory.cpp  I2CBusFactory.h  I2CDevice.cpp  I2CDevice.h  I2CDeviceCommand.cpp  I2CDeviceCommand.h
Vision/i2c/devices/: LSM9DS0.cpp  LSM9DS0.h
zeromq/: .classpath  .project
zeromq/src/: Test.java
zeromqC++/: .cproject  .project
zeromqC++/Release/: makefile
zeromqC++/Release/src/: subdir.mk
zeromqC++/src/: zeromqC++.cpp
(+54 files in other folders)
